added Jojo's Dialogue here

--- a/index.html
+++ b/index.html
@@ -1,1 +1,99 @@
-# Test-site
+<!DOCTYPE html>
+<html>
+<head>
+     <meta charset="utf-8"><!--This defines the type of charset-->
+     <!--This gives a brief decription on what the website is (usually found in seaarch engines)-->
+     <meta description="This is a test website. I am still practicing."
+     <!--This refreshes the website on a certain interval on a valid URL-->
+     <!--<meta http-equiv="refresh" content="5;url="C:\Users\User\Desktop\Robert research\Jojo's Dialogue.html">-->
+     <title>💚Hello Warudo🔯</title>
+</head>
+
+<body>
+     <a id="igit"><b>Dio:</b>Ohh?! You're approaching me?!</a>
+     <br><b>Jotaro:</b>
+     I can't beat the shit out of you if I don't get closer.
+     <br><b>Dio:</b> 
+Then come as close as you like.
+     <center><p>Help <em>me</em> I am so <strong><a href="https://www.facebook.com/">bored.</strong></a> May I squishes fat?<br>I need help</p></center>
+     <hr>
+     <marquee direction="right" border:solid><h4>
+          ORAORAORAORAORAORAORAORAORAORAORAORAORORO
+     ROROAORORORORORORAORA
+     ORAORAORAORAOROAORAORAORAORAORAORAORAORAORAORA</h4></marquee>
+     <br>
+     <marquee>MUDAMUDAMUDAMUDAMUDMAUDMUMDUMDUMDUMDUMDAUMUDAMUDAMUDAMUDAMUDA</marquee>
+     
+     <!--img src can be a url-->
+     <center>
+     <img src="pussy.jpg" height="402" width="450"
+     alt="Picture may contain misygony">
+     <img height="402" width="450" 
+     src="https://i.redd.it/y3ee1iw74u121.jpg" 
+     alt="Picture may contain women empowerment"></center>
+     <br>
+     <h1>Hobbies</h1><!--you have to place an id element first in order href to identify-->
+     <ol type="A">
+          <a href="WHY WOMEN DESERVE LESS.html"><h2><li>Saying the N word</li></h2></a>
+          <ul>
+               <li>N</li>
+               <li>I</li>
+               <li>G</li>
+               <li>G</li>
+               <li>E</li>
+               <li>R</li>
+          </ul>
+          <h2><li>Playing the Piano</li></h2>
+          <ul>
+               <li>Chopin</li>
+               <li>Debussy</li>
+               <li>Rachmaninoff</li>
+          </ul>
+     </ol>
+     <footer><h1>Women Empowerment!!!!!</h1></footer>
+     a
+     z
+     z
+     z
+     z
+     <br>
+     z
+     zz
+     z
+     <br>
+     zzz
+     zzz
+     zzz
+     zzz
+     <br>
+
+     zzz
+     zzz
+     zzz
+     zzz
+     zzz
+     <br>
+     zzz
+     z
+     z
+     zzz
+     zzz
+     zzzz
+     <br>
+     z
+     zzzzz
+     zzzzz
+     zz
+     zzzzz
+     zzzzz
+     <br>
+     <br>
+     <br>
+     <br>
+     <br>
+     <br>
+     <br>
+<p><a href="#igit"><strong>Click here to go back up!</strong></a></p><!--This is to link to a same element-->
+<br><a href="Tables.html"><strong>Click here for the next project</strong></a>
+</body>
+</html>
