Update WHY WOMEN DESERVE LESS.html

--- a/WHY WOMEN DESERVE LESS.html
+++ b/WHY WOMEN DESERVE LESS.html
@@ -10,9 +10,9 @@
     </ol>
 <marquee><h1>BUY MY MISYGONYSTIC MERCH</h1></marquee>
 <img class="fit picture"
-     src="C:\Users\User\Desktop\Robert research\women deserve less.jpg"
+     src="women deserve less.jpg"
      alt="Picture may contain misygony">
      <img class="fit picture"
-     src="C:\Users\User\Desktop\Robert research\pussy.jpg"
+     src="pussy.jpg"
      alt="Picture may contain misyogny"
      
